After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 111272 - segfault when saving file in .xls format
segfault when saving file in .xls format
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
1.0.x
Other other
: Normal critical
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-04-21 15:45 UTC by kokostm
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description kokostm 2003-04-21 15:45:19 UTC
Package: Gnumeric
Severity: critical
Version: 1.0.12
Synopsis: segfault when saving file in .xls format
Bugzilla-Product: Gnumeric
Bugzilla-Component: MS Excel (tm)

Description:
open this file and then try to save it in .xls format


Debugging Information:

[New Thread 1024 (LWP 1321)]
0x420b4769 in wait4 () from /lib/i686/libc.so.6
  • #0 wait4
    from /lib/i686/libc.so.6
  • #1 __DTOR_END__
    from /lib/i686/libc.so.6
  • #2 gnome_segv_handle
    from /usr/lib/libgnomeui.so.32
  • #3 <signal handler called>
  • #4 write_mergecells
    at ms-excel-write.c line 552
  • #5 write_sheet_tail
    at ms-excel-write.c line 3315
  • #6 write_sheet
    at ms-excel-write.c line 3557
  • #7 write_workbook
    at ms-excel-write.c line 3716
  • #8 ms_excel_write_workbook
    at ms-excel-write.c line 3811
  • #9 excel_save
    at boot.c line 172
  • #10 gnumeric_plugin_loader_module_func_file_save
    at plugin-loader-module.c line 474
  • #11 gnum_plugin_file_saver_save
    at plugin-service.c line 609
  • #12 gnum_file_saver_save
    at file.c line 502
  • #13 wb_view_save_as
    at workbook-view.c line 614
  • #14 do_save_as
    at gui-file.c line 230
  • #16 impl_Bonobo_UIComponent_execVerb
    from /usr/lib/libbonobox.so.2
  • #17 Bonobo_UIComponent_execVerb
    from /usr/lib/libbonobo.so.2
  • #18 real_exec_verb
    from /usr/lib/libbonobox.so.2
  • #19 impl_emit_verb_on
    from /usr/lib/libbonobox.so.2
  • #20 gtk_marshal_NONE__POINTER
    from /usr/lib/libgtk-1.2.so.0
  • #21 gtk_signal_real_emit
    from /usr/lib/libgtk-1.2.so.0
  • #22 gtk_signal_emit
    from /usr/lib/libgtk-1.2.so.0
  • #23 bonobo_ui_engine_emit_verb_on_w
    from /usr/lib/libbonobox.so.2
  • #24 exec_verb_cb
    from /usr/lib/libbonobox.so.2
  • #25 gtk_marshal_NONE__NONE
    from /usr/lib/libgtk-1.2.so.0
  • #26 gtk_handlers_run
    from /usr/lib/libgtk-1.2.so.0
  • #27 gtk_signal_real_emit
    from /usr/lib/libgtk-1.2.so.0
  • #28 gtk_signal_emit
    from /usr/lib/libgtk-1.2.so.0
  • #29 gtk_widget_activate
    from /usr/lib/libgtk-1.2.so.0
  • #30 gtk_menu_shell_activate_item
    from /usr/lib/libgtk-1.2.so.0
  • #32 gtk_marshal_BOOL__POINTER
    from /usr/lib/libgtk-1.2.so.0
  • #33 gtk_signal_real_emit
    from /usr/lib/libgtk-1.2.so.0
  • #34 gtk_signal_emit
    from /usr/lib/libgtk-1.2.so.0
  • #35 gtk_widget_event
    from /usr/lib/libgtk-1.2.so.0
  • #36 gtk_propagate_event
    from /usr/lib/libgtk-1.2.so.0
  • #37 gtk_main_do_event
    from /usr/lib/libgtk-1.2.so.0
  • #38 gdk_event_dispatch
    from /usr/lib/libgdk-1.2.so.0
  • #39 g_main_dispatch
    from /usr/lib/libglib-1.2.so.0
  • #40 g_main_iterate
    from /usr/lib/libglib-1.2.so.0
  • #41 g_main_run
    from /usr/lib/libglib-1.2.so.0
  • #42 gtk_main
    from /usr/lib/libgtk-1.2.so.0
  • #43 main
    at main.c line 263
  • #44 __libc_start_main
    from /lib/i686/libc.so.6
  • #0 wait4
    from /lib/i686/libc.so.6
  • #1 __DTOR_END__
    from /lib/i686/libc.so.6
  • #3 <signal handler called>
  • #4 write_mergecells
    at ms-excel-write.c line 552
  • #5 write_sheet_tail
    at ms-excel-write.c line 3315
  • #6 write_sheet
    at ms-excel-write.c line 3557
  • #7 write_workbook
    at ms-excel-write.c line 3716




------- Bug moved to this database by unknown@bugzilla.gnome.org 2003-04-21 11:45 -------

The original reporter (kokostm@auburn.edu) of this bug does not have an account here.
Reassigning to the exporter, unknown@bugzilla.gnome.org.
Reassigning to the default owner of the component, jody@gnome.org.

Comment 1 Morten Welinder 2003-04-21 16:15:46 UTC
Could we have a copy of that file, please?  Without further information,
this is going to be very hard to reproduce.
Comment 2 Morten Welinder 2003-04-21 18:44:45 UTC
We got the file via email ==> reopening.
Comment 3 Jody Goldberg 2003-04-21 20:04:11 UTC
Lovely.  The problem was simple.  MS Excel has a record size limit and
there were enough merged cells in the 'Assignment' worksheet to
overflow that maximum.  We were refusing the write the record, but not
handling the failure.

Patch is in cvs, and will be in the 1.0.14 release.

Thanks