backport patch for http://bugzilla.gnome.org/show_bug.cgi?id=111272 handle

2003-04-21  Jody Goldberg <jody@gnome.org>

	backport patch for http://bugzilla.gnome.org/show_bug.cgi?id=111272
	* ms-excel-write.c (excel_write_MERGECELLS) : handle too many merges
	  for a single biff record.
	* ms-biff.c (ms_biff_max_record_len) : new.